--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "lucida console";
+    font-family: "Courier New", simsun;
     font-weight: 400;
     color: #333;
     line-height: 1.6;
